--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,19 +6,18 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.4.2+20210227
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_tts:
-  path_provider:
-  shared_preferences:
-  preferences:
+  path_provider: ^2.0.1
+  #shared_preferences: ^2.0.3
+  preferences: ^5.2.1
   url_launcher:
   wakelock:
-  soundpool:
-  intl_translation:
+  soundpool: ^1.1.3
   scrollable_positioned_list:
   flutter_localizations:
     sdk: flutter
@@ -27,9 +26,16 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   #integration_test:
-  flutter_launcher_icons:
-  flutter_oss_licenses:
+  intl_utils: ^2.0.0
+  flutter_launcher_icons: ^0.9.0
+  flutter_oss_licenses: ^1.0.0
   effective_dart:
+
+dependency_overrides:
+  #yaml: '3.1.0'
+  http: ^0.13.0
+  preferences: ^5.2.1
+  shared_preferences: ^2.0.3
 
 flutter:
   uses-material-design: true
@@ -42,5 +48,6 @@ flutter_icons:
   android: "launcher_icon"
   ios: false
   image_path: "assets/ic_launcher.png"
+
 flutter_intl:
   enabled: true
