--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   url_launcher:
   wakelock:
   soundpool: ^1.1.3
-  scrollable_positioned_list: ^0.2.0-nullsafety.0
+  scrollable_positioned_list:
   flutter_localizations:
     sdk: flutter
 
