--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_tts:
+  flutter_tts: ^3.0.0
   path_provider: ^2.0.1
-  #shared_preferences: ^2.0.3
-  preferences: ^5.2.1
-  url_launcher:
-  wakelock:
+  shared_preferences: ^2.0.3
+  pref: ^2.0.0
+  url_launcher: ^6.0.2
+  wakelock: ^0.5.0+2
   soundpool: ^1.1.3
   scrollable_positioned_list:
   flutter_localizations:
@@ -32,10 +32,7 @@ dev_dependencies:
   effective_dart:
 
 dependency_overrides:
-  #yaml: '3.1.0'
   http: ^0.13.0
-  preferences: ^5.2.1
-  shared_preferences: ^2.0.3
 
 flutter:
   uses-material-design: true
